--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -234,7 +234,8 @@ coverage:
   only:
     - master
   needs:
-    - build
+    - build-maven
+    - build-front-end
 
 reporting:
   image: maven:3.8-openjdk-17-slim
