--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,11 +44,11 @@ before_script:
   - apt-get update -y
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
-  - apt-get install -y npm
-  - npm install --global yarn
-  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-  - source ~/.bashrc
-  - nvm install --lts
+#  - apt-get install -y npm
+#  - npm install --global yarn
+#  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+#  - source ~/.bashrc
+#  - nvm install --lts
 
 build-maven:
   image: maven:3.8-openjdk-17-slim
