--- a/favourite-lyrics-gui/package.json
+++ b/favourite-lyrics-gui/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +45,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081"
+  "proxy": "http://localhost:8081",
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^28.0.5"
+  }
 }
