NGINX to the MAX

--- a/favourite-lyrics-gui/nginx/default.conf
+++ b/favourite-lyrics-gui/nginx/default.conf
@@ -6,7 +6,19 @@ server {
 
     server_name _;
 
-    location /lyrics/ {
+    location /actuator    {
+     proxy_pass http://${FLA_BACKEND}:8080;
+    }
+
+    location /actuator/    {
+     proxy_pass http://${FLA_BACKEND}:8080;
+    }
+
+    location /lyrics    {
+     proxy_pass http://${FLA_BACKEND}:8080;
+    }
+
+    location /lyrics/    {
      proxy_pass http://${FLA_BACKEND}:8080;
     }
 
