--- a/renovate.json
+++ b/renovate.json
@@ -25,6 +25,13 @@
         "@types"
       ],
       "automerge": true
+    },
+    {
+      "groupName": "Flyway Group",
+      "matchPackagePrefixes": [
+        "org.flywaydb"
+      ],
+      "automerge": true
     }
   ]
 }
