Increases connection pool of the database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     hostname: ${PROJECT_SLUG}_postgres
     restart: on-failure
     image: postgres:14.4
+    command: -c 'max_connections=400' -c 'shared_buffers=100MB'
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
