Flyway as run by Spring

--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
+server.forward-headers-strategy=framework
+
 # Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexagonal
 spring.datasource.username=fla
@@ -6,11 +8,19 @@ spring.datasource.password=admin
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
+
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-# Flyway
-spring.flyway.enabled=false
 springdoc.show-actuator=true
-server.forward-headers-strategy=framework
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.locations=classpath:/db
+
 fla.server.url=http://localhost:${server.port}
+
