--- a/favourite-lyrics-starter/src/main/resources/application-docker.properties
+++ b/favourite-lyrics-starter/src/main/resources/application-docker.properties
@@ -3,6 +3,15 @@ spring.datasource.url=jdbc:postgresql://192.168.0.11:5432/fla?currentSchema=hexa
 spring.datasource.username=fla
 spring.datasource.password=admin
 spring.sql.init.mode=never
+
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.locations=classpath:/db
