--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -15,12 +15,7 @@ spring.jpa.show-sql=true
 springdoc.show-actuator=true
 
 # Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.url=${spring.datasource.url}
-spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=${spring.datasource.password}
-spring.flyway.locations=classpath:/db
+spring.flyway.enabled=false
 
 fla.server.url=http://localhost:${server.port}
 
