--- a/e2e/package.json
+++ b/e2e/package.json
@@ -18,7 +18,7 @@
   "author": "João Esperancinha",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^10.3.0",
+    "cypress": "10.5.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
