--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["es6", "dom"],
-    "types": ["cypress", "node"]
+    "baseUrl": "http://192.168.0.25:8080",
   },
   "include": ["**/*.ts"]
 }
