--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "repositories": ["jesperancinha/favourite-lyrics-app"],
   "platform": "gitlab",
+  "extends": ["github>whitesource/merge-confidence:beta"],
   "packageRules": [
     {
       "matchUpdateTypes": [
