--- a/favourite-lyrics-gui/package.json
+++ b/favourite-lyrics-gui/package.json
@@ -2,24 +2,26 @@
   "name": "favourite-lyrics-gui",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
     "@types/react-cache": "^2.0.1",
     "@types/react-dom": "^18.0.6",
-    "axios": "^0.27.2",
     "postcss-normalize": "^10.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-async": "^10.0.1",
+    "react-axios": "^2.0.6",
     "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^3.0.0"
+    "typescript": "^4.8.4",
+    "web-vitals": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,8 +51,18 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@types/react-test-renderer": "^18.0.0",
+    "axios": "^1.0.0",
     "html-webpack-plugin": "^5.5.0",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.0"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "./node_modules/(?!axios)"
+    ]
   }
 }
