--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <testcontainers.version>1.17.5</testcontainers.version>
         <springdoc-openapi-ui.version>1.6.13</springdoc-openapi-ui.version>
         <kotlinx-coroutines-debug.version>1.6.4</kotlinx-coroutines-debug.version>
+        <versions-maven-plugin.version>2.13.0</versions-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -168,7 +169,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.7</version>
+                <version>${versions-maven-plugin.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>org.apache.commons:commons-collections4</exclude>
