--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,13 +1,13 @@
 version: "3.7"
 services:
-  fla_postgres:
+  fla-postgres:
     ports:
       - "${PG_EXPOSED_PORT}:${PG_EXPOSED_PORT}"
 
-  fla_backend:
+  fla-backend:
     ports:
       - "8081:8080"
 
-  fla_nginx:
+  fla-nginx:
     ports:
       - "8080:8080"
