--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   e2e-electron:
     image: "cypress/included:12.0.2"
     working_dir: /e2e
-    command: "--browser electron --env host=192.168.0.25"
+    command: "--browser electron --env host=fla-nginx"
     volumes:
       - ./e2e:/e2e
     networks:
@@ -12,7 +12,7 @@ services:
   e2e-chrome:
     image: "cypress/included:12.0.2"
     working_dir: /e2e
-    command: "--browser chrome --env host=192.168.0.25"
+    command: "--browser chrome --env host=fla-nginx"
     volumes:
       - ./e2e:/e2e
     networks:
@@ -21,7 +21,7 @@ services:
   e2e-firefox:
     image: "cypress/included:12.0.2"
     working_dir: /e2e
-    command: "--browser firefox --env host=192.168.0.25"
+    command: "--browser firefox --env host=fla-nginx"
     volumes:
       - ./e2e:/e2e
     networks:
@@ -30,7 +30,7 @@ services:
   e2e-edge:
     image: "cypress/included:12.0.2"
     working_dir: /e2e
-    command: "--browser edge --env host=192.168.0.25"
+    command: "--browser edge --env host=fla-nginx"
     volumes:
       - ./e2e:/e2e
     networks:
