--- a/favourite-lyrics-gui/nginx/default.conf
+++ b/favourite-lyrics-gui/nginx/default.conf
@@ -7,35 +7,35 @@ server {
     server_name _;
 
     location /actuator    {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /actuator/    {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /lyrics    {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /lyrics/    {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /swagger-ui/ {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /v3/api-docs/swagger-config/ {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /v3/api-docs/ {
-     proxy_pass http://${FLA_BACKEND}:8080;
+     proxy_pass http://fla-backend:8080;
     }
 
     location /lyrics/broker {
-      proxy_pass http://${FLA_BACKEND}:8080;
+      proxy_pass http://fla-backend:8080;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
