--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.flyway.enabled=false
 
 fla.server.url=http://localhost:${server.port}
 
+springdoc.swagger-ui.path=swagger-ui
+springdoc.api-docs.path=/v3/api/docs
+springdoc.paths-to-match=/**
