--- a/favourite-lyrics-gui/nginx/default.conf
+++ b/favourite-lyrics-gui/nginx/default.conf
@@ -26,11 +26,11 @@ server {
      proxy_pass http://fla-backend:8080;
     }
 
-    location /v3/api-docs/swagger-config/ {
+    location /v3/api/docs/swagger-config {
      proxy_pass http://fla-backend:8080;
     }
 
-    location /v3/api-docs/ {
+    location /v3/api/docs {
      proxy_pass http://fla-backend:8080;
     }
 
