--- a/favourite-lyrics-starter/pom.xml
+++ b/favourite-lyrics-starter/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jesperancinha.lyrics</groupId>
