Foundations pre auto conversion to Kotlin

--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
+        <kotlin.version>1.8.10</kotlin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
         <versions-maven-plugin.version>2.14.2</versions-maven-plugin.version>
+        <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
 
         <kotlinx-coroutines-debug.version>1.6.4</kotlinx-coroutines-debug.version>
         <lombok.version>1.18.26</lombok.version>
@@ -79,6 +81,11 @@
             </dependency>
 
             <!-- External dependencies -->
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
