--- a/favourite-lyrics-starter/pom.xml
+++ b/favourite-lyrics-starter/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>favourite-lyrics-domain</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
