--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: ${PROJECT_SLUG}-postgres
     hostname: ${PROJECT_SLUG}-postgres
     restart: on-failure
-    image: postgres:15.2
+    image: postgres
     command: -c 'max_connections=400' -c 'shared_buffers=100MB'
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
