--- a/.github/workflows/favorite-lyrics-app-pull-request.yml
+++ b/.github/workflows/favorite-lyrics-app-pull-request.yml
@@ -2,7 +2,7 @@ name: FLA Pull Request
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   push:
     branches:
       - '!master'
