--- a/favourite-lyrics-rest/pom.xml
+++ b/favourite-lyrics-rest/pom.xml
@@ -39,6 +39,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- MockK for Kotlin mocking -->
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.13.13</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Spring MockK integration for @MockkBean support -->
+        <dependency>
+            <groupId>com.ninja-squad</groupId>
+            <artifactId>springmockk</artifactId>
+            <version>4.0.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
