--- a/favourite-lyrics-starter/pom.xml
+++ b/favourite-lyrics-starter/pom.xml
@@ -76,6 +76,20 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <!-- MockK for Kotlin mocking -->
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.13.13</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Spring MockK integration for @MockkBean support -->
+        <dependency>
+            <groupId>com.ninja-squad</groupId>
+            <artifactId>springmockk</artifactId>
+            <version>4.0.2</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
