--- a/favourite-lyrics-rest/pom.xml
+++ b/favourite-lyrics-rest/pom.xml
@@ -39,18 +39,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- MockK for Kotlin mocking -->
+        <!-- MockK for Kotlin mocking (version managed via BOM in parent) -->
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
-            <version>1.13.13</version>
             <scope>test</scope>
         </dependency>
-        <!-- Spring MockK integration for @MockkBean support -->
+        <!-- Spring MockK integration for @MockkBean support (version managed in parent) -->
         <dependency>
             <groupId>com.ninja-squad</groupId>
             <artifactId>springmockk</artifactId>
-            <version>4.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
