--- a/favourite-lyrics-starter/pom.xml
+++ b/favourite-lyrics-starter/pom.xml
@@ -76,18 +76,16 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
-        <!-- MockK for Kotlin mocking -->
+        <!-- MockK for Kotlin mocking (version managed by BOM in parent) -->
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>1.13.13</version>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- Spring MockK integration for @MockkBean support -->
+        <!-- Spring MockK integration for @MockkBean/@SpykBean (version managed in parent) -->
         <dependency>
             <groupId>com.ninja-squad</groupId>
             <artifactId>springmockk</artifactId>
-            <version>4.0.2</version>
             <scope>test</scope>
         </dependency>
 
